# sigmae

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  testing_gpt_for_img_gen.py  todo.md
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  supervision_scheduler.yaml
configs/data/: audio.yaml  default.yaml  image.yaml  text.yaml
configs/experiment/: cifar_bart_cnn.yaml  cifar_bart_cnn_skip.yaml  cifar_cnn_cnn.yaml  cifar_vqvae_bart.yaml  cifartokonly_vqvae_bart.yaml  example.yaml  imagenette_bart_cnn.yaml  mnist_vit.yaml  mnist_vit_bart.yaml  scan_bart.yaml  timit_audio_enc_dec.yaml
configs/logger/: wandb.yaml
configs/model/: bart_bart.yaml  bart_bart_times_two.yaml  bart_softmax_bart_times_two.yaml  cnn_cnn.yaml  default.yaml  t5_speech_text.yaml  vit_bart_bart.yaml  vit_bart_cnn.yaml  vit_softmax_bart_cont.yaml  vitpretrained_bart_cnn.yaml  vqvae_tokens.yaml  wav2vecgpt_softmax_bart_cont.yaml
configs/trainer/: default.yaml
notebooks/: extracting_metrics.ipynb  final_plots.ipynb  finetune_t5_scan.py  generate_plots.ipynb  metrics.json  microsoft_vq_diff.ipynb  model_loading_and_playground.ipynb  notebook_utils.py  scratch.ipynb
scripts/bash_scripts/: run-test.sh  run-train-narval.sh  run-train.sh  run_supunsup_softmax.sh  run_unsupsup.sh  t5_finetuning.sh  trained_model_paths.sh  training_scripts.sh
scripts/tokenizer_training_on_data/: train_tokenizer.bash  train_tokenizer_on_dataset.py
src/: eval.py  train.py
symbolic_bottleneck/: __init__.py  auto_reg_wrapper.py  symbolic_autoencoder_wrapper.py  utils.py
(+101 files in other folders)
